--- a/src/frontend/app/shared/components/list/list.component.html
+++ b/src/frontend/app/shared/components/list/list.component.html
@@ -5,6 +5,9 @@
       <mat-card [ngClass]="{'list-component__header--selected': (dataSource.isSelecting$ | async), 'mat-header-row': (view$ | async) === 'table'}" class="list-component__header-card">
         <div class="list-component__header__left">
           <div class="list-component__header__left--text" *ngIf="!(isAddingOrSelecting$ | async) && config.text?.title">{{ config.text?.title }}</div>
+          <div class="list-component__header__left--metrics-range" *ngIf="config.showMetricsRange && !(isAddingOrSelecting$ | async)">
+            Time Range: <app-metrics-range-selector [baseAction]="config.getDataSource().action" (metricsAction)="metricsActionNew($event)"></app-metrics-range-selector>
+          </div>
           <div class="list-component__header__left--text" *ngIf="(dataSource.isSelecting$ | async)">{{dataSource.selectedRows.size}} Selected</div>
           <!-- Multi filters, such as filter app wall by cf/org/space -->
           <div class="list-component__header__left--multi-filters" [hidden]="(!(hasRows$ | async) && !filter) || (isAddingOrSelecting$ | async)">
